--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="extlibs/sqlite-jdbc-3.7.2.jar"/>
+	<classpathentry kind="lib" path="extlibs/jython-standalone-2.5.4-rc1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
